Fix layout issues on OpenSCAP search page

--- a/web/html/src/branding/css/base/theme.less
+++ b/web/html/src/branding/css/base/theme.less
@@ -167,6 +167,10 @@ section {
     .make-xs-column(10);
     padding: @content-area-padding;
     float: right;
+
+    @media (max-width: @screen-tablet) {
+      padding: @content-area-padding-mobile;
+    }
   }
 }
 
