--- a/web/html/src/branding/css/base/theme.scss
+++ b/web/html/src/branding/css/base/theme.scss
@@ -160,6 +160,10 @@ section {
   section {
     padding: $content-area-padding;
     float: right;
+
+    @media (max-width: $screen-tablet) {
+      padding: $content-area-padding-mobile;
+    }
   }
 }
 
