--- a/web/html/src/branding/css/susemanager-light-variables.less
+++ b/web/html/src/branding/css/susemanager-light-variables.less
@@ -7,3 +7,4 @@
 @border-radius-small: 0;
 
 @content-area-padding: 0 4em 4em;
+@content-area-padding-mobile: 0 1em 1em;
