--- a/web/html/src/branding/css/susemanager-light-variables.scss
+++ b/web/html/src/branding/css/susemanager-light-variables.scss
@@ -3,3 +3,4 @@ $body-font: $lato;
 $link-color: $eos-bc-blue-500;
 
 $content-area-padding: 0 4em 4em;
+$content-area-padding-mobile: 0 1em 1em;
