--- a/web/html/src/branding/css/uyuni-variables.scss
+++ b/web/html/src/branding/css/uyuni-variables.scss
@@ -6,6 +6,7 @@ $header: $uyuni-blue-900;
 $header-text: $uyuni-gray-100;
 
 $content-area-padding: 0 2em 3em;
+$content-area-padding-mobile: 0 1em 1em;
 
 $aside-background: $uyuni-blue-900;
 $aside-menu-text: $uyuni-gray-100;
